# cleoapp

./: .gitignore  README.md
api/: Cargo.toml  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh
api/fixtures/: seed.sql
api/fixtures/media/video/user_1/2025-12-12/: recording_001.mov
api/llm_docs/: CODE_COMPLEXITY_REVIEW.md  api-error-pattern.md  architecture-patterns.md  codebase-issues-index.md  reducto_api_quickstart.md  reson_agentic.txt  timescaledb  twitter.txt  x_api.txt
api/llm_docs/future/: multi-platform.md
api/migrations/: 001_init.sql  002_users.sql  003_api_tokens.sql  004_thumbnails.sql  005_threads.sql  006_thumbnail_attempts.sql  007_sessions.sql  008_activities_user_id.sql  009_edited_captures.sql  010_nudges.sql  011_collateral_options.sql  012_push_subscriptions.sql  013_tweet_publish_state.sql  014_agent_runs_reliability.sql  015_soft_delete_dismissed.sql  016_frames.sql  017_frames_processing.sql  018_processing_leases.sql
api/scripts/: seed-dev.sh
api/src/: agent.rs  constants.rs  frames.rs  main.rs  models.rs  storage.rs  thumbnails.rs  twitter.rs
api/src/domain/: activities.rs  captures.rs  content.rs  mod.rs  push.rs  users.rs
api/src/domain/twitter/: mod.rs
api/src/domain/twitter/models/: mod.rs  thread.rs  tweet.rs
api/src/domain/twitter/queries/: mod.rs  threads.rs  tweets.rs
api/src/routes/: agent.rs  auth.rs  captures.rs  media_studio.rs  mod.rs  nudges.rs  push.rs  twitter_oauth.rs  user.rs
api/src/routes/content/: mod.rs
api/src/routes/content/twitter/: dto.rs  media.rs  mod.rs  threads.rs  tweets.rs
api/src/services/: auth.rs  cookies.rs  db.rs  error.rs  media_studio.rs  mod.rs  push.rs  rate_limit.rs  session.rs  twitter.rs
daemon/: .gitignore  Cargo.toml  Info.plist  InfoPlistExtras.plist  Makefile  build.rs  client.entitlements
daemon/assets/: AppIcon.icns
daemon/src/: accessibility.rs  api.rs  app.rs  banned_apps_window.rs  command_palette.rs  idle.rs  interval.rs  keyboard_tracker.rs  logging.rs  main.rs  mouse_tracker.rs  workspace_tracker.rs
daemon/src/content_filter/: mod.rs  noop.rs  nsfw.rs
docs/: helm-deploy-notes.md
helm/cleo/: Chart.yaml  values.yaml
helm/cleo/templates/: _helpers.tpl  api-deployment.yaml  api-pv.yaml  api-service.yaml  ingress.yaml  media-server-deployment.yaml  media-server-service.yaml  serviceaccount.yaml  web-deployment.yaml  web-service.yaml
scripts/: build.sh  export_icons.sh  migrate.sh
web/: Dockerfile  docker-entrypoint.sh  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/public/: manifest.webmanifest  sw.js
web/src/: api.ts  main.ts  styles.css
web/src/components/: card-header.ts  card-shell.ts  cleo-app.ts  content-badge.ts  dashboard-page.ts  image-cropper.ts  login-page.ts  media-browser.ts  media-editor.ts  nudges-modal.ts  sidebar-toolbar.ts  thread-card.ts  timeline-rail.ts  timeline-section.ts  tweet-card.ts  tweet-content.ts  video-trimmer.ts
web/src/styles/: shared.ts
web/src/utils/: time-grouping.ts
