[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
axum-extra = { version = "0.10", features = ["cookie"] }
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
futures = "0.3.31"
google-cloud-storage = "1.4.0"
hmac = "0.12"
percent-encoding = "2.3"
rand = "0.9"
reqwest = { version = "0.12", features = ["json"] }
reson-agentic = { version = "0.1.3", path = "../../cleo/reson/reson-rust" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "postgres",
    "chrono",
    "uuid",
] }
tokio = { version = "1.48.0", features = ["full"] }
