[package]
name = "api"
version = "0.1.0"
edition = "2024"

[lints.rust]
warnings = "deny"

[dependencies]
axum = { version = "0.8.7", features = ["macros", "multipart", "ws"] }
axum-extra = { version = "0.10", features = ["cookie"] }
base64 = "0.22.1"
bytes = "1.9"
chrono = { version = "0.4.42", features = ["serde"] }
cloud-storage = "0.11"
futures = "0.3.31"
google-cloud-storage = "1.4.0"
hmac = "0.12"
image = "0.25"
jsonwebtoken = "9"
percent-encoding = "2.3"
time = "0.3"
rand = "0.9"
reqwest = { version = "0.12", features = ["json"] }
reson-agentic = "0.1.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "postgres",
    "chrono",
    "uuid",
] }
tokio = { version = "1.48.0", features = ["full", "process"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "set-header"] }
tower_governor = "0.6"
apalis = "0.6"
apalis-cron = "0.6"
apalis-sql = { version = "0.6", features = ["postgres"] }
