[package]
name = "cleo"
version = "0.1.0"
edition = "2024"

[dependencies]
cacao = "0.4.0-beta2"
objc = "0.2"
objc_id = "0.1"
chrono = { version = "0.4", features = ["serde", "clock"] }
reqwest = { version = "0.12", features = ["blocking", "json", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
screencapturekit = { version = "1", features = ["macos_15_0"] }
png = "0.17"
core-foundation = "0.9"
libc = "0.2"
log = "0.4"
oslog = "0.2"
block = "0.1"
url = "2"
dirs = "5"

# NSFW detection with Candle
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
hf-hub = "0.4"
image = "0.25"
anyhow = "1"
image_hasher = "2"
global-hotkey = "0.7.0"

[features]
default = []
accelerate = ["candle-core/accelerate", "candle-nn/accelerate", "candle-transformers/accelerate"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
