[package]
name = "cleo"
version = "0.1.0"
edition = "2024"
description = "Cleo - Intelligent screen capture daemon for macOS"

[package.metadata.bundle]
name = "Cleo"
identifier = "com.cleo.cleo"
icon = ["assets/AppIcon.icns"]
resources = ["assets/menubar-icon.png", "assets/menubar-icon@2x.png"]
copyright = "Copyright (c) 2025 CleoAI. All rights reserved."
category = "Developer Tool"
osx_minimum_system_version = "13.0"
osx_url_schemes = ["cleo"]
osx_info_plist_exts = ["InfoPlistExtras.plist"]

[dependencies]
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSRunningApplication", "NSWorkspace", "NSEvent", "NSPanel", "NSWindow", "NSView", "NSTextField", "NSImageView", "NSImage", "NSBox", "NSColor", "NSFont", "NSVisualEffectView", "NSMenu", "NSMenuItem", "NSAlert", "NSStatusBar", "NSStatusItem", "NSStatusBarButton", "NSResponder", "NSControl", "NSText", "NSSwitch", "NSCell", "NSScrollView", "block2", "objc2-quartz-core"] }
objc2-quartz-core = { version = "0.3", features = ["CALayer", "objc2-core-graphics"] }
objc2-core-graphics = { version = "0.3", features = ["CGColor", "CGColorSpace"] }
objc2-core-foundation = "0.3"
block2 = "0.6"
dispatch2 = "0.3"
chrono = { version = "0.4", features = ["serde", "clock"] }
reqwest = { version = "0.12", features = ["blocking", "json", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
screencapturekit = { version = "1", features = ["macos_15_0"] }
png = "0.17"
core-foundation = "0.9"
libc = "0.2"
log = "0.4"
oslog = "0.2"
url = "2"
dirs = "5"

# NSFW detection with Candle
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
hf-hub = "0.4"
image = "0.25"
anyhow = "1"
image_hasher = "2"
global-hotkey = "0.7.0"

[features]
default = []
accelerate = ["candle-core/accelerate", "candle-nn/accelerate", "candle-transformers/accelerate"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
